# vk-renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Assets/: Compile.bat  Compile.sh  Fullscreen.frag  Fullscreen.vert  Raytracer.comp  Tracer.comp  Triangle.vert  comp.spv  frag.spv  vert.spv
Assets/Compiled/: Fullscreen.frag.spv  Fullscreen.vert.spv  Raytracer.comp.spv  Tracer.comp.spv
Doc/: Materials.md
Include/: Camera.h  GraphicsDevice.h  Instance.h  RenderGraph.h  Surface.h  Util.hpp  VulkanApp.h
Source/: Camera.cpp  GraphicsDevice.cpp  Instance.cpp  Main.cpp  Surface.cpp  VulkanApp.cpp  VulkanState.h
